# Sift

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-PROGRESS-AUDIT-P1-P3.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/: analyze-embeddings-batch-exceeds-context.md  analyze-transport-error-context-overflow.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-skeleton-event-contract-genericlog-adapter/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-case-store-template-dedup/: 02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-inference-client-doctor-embeddings-clustering/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-05-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-SECURITY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md  COVERAGE.md
.planning/phases/04-salience-rag-citation-gated-hypotheses/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-PATTERNS.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-domain-adapters-journald-dsserrors-eustack/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-SECURITY.md  05-VALIDATION.md  05-VERIFICATION.md  REVIEW.md
.planning/phases/06-renderers-kb-retrieval/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-05-PLAN.md  06-PATTERNS.md  06-SECURITY.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-evaluation-harness-golden-cases/: 07-01-SUMMARY.md  07-03-PLAN.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-PATTERNS.md  07-RESEARCH.md  07-UAT.md
.planning/phases/08-packaging-deploy/: 08-01-PLAN.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-CONTEXT.md  08-RESEARCH.md  08-REVIEWS.md  08-VALIDATION.md
.planning/phases/09-mcm-episode-detection-memory-breakdown/: 09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-PATTERNS.md  09-REVIEW.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-diagnostic-flags-lead-up-attribution-sift-mcm-report-csv/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-04-SUMMARY.md  10-PATTERNS.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-mcm-facts-into-sift-analyze-golden-eval-case/: 11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-REVIEW.md  11-VALIDATION.md
.planning/phases/12-dssperfmon-adapter-pipeline-exclusion/: 12-01-PLAN.md  12-02-PLAN.md  12-03-PLAN.md  12-03-SUMMARY.md  12-04-PLAN.md  12-04-SUMMARY.md  12-CONTEXT.md  12-DISCUSSION-LOG.md  12-RESEARCH.md  12-REVIEW.md  12-VALIDATION.md
.planning/phases/13-episode-correlation-hazard-flags-sift-perfmon-report-csv/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-CONTEXT.md  13-DISCUSSION-LOG.md  13-PATTERNS.md  13-RESEARCH.md  13-REVIEW-FIX-WR03.md  13-REVIEW.md  13-SECURITY.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-perfmon-facts-into-sift-analyze-golden-eval-case/: 14-01-PLAN.md  14-01-SUMMARY.md  14-03-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-dssperformancemonitor-csv.md
.planning/tmp/: docs-work-manifest.json  verify-ARCHITECTURE.md.json  verify-CONTRIBUTING.md.json  verify-DEVELOPMENT.md.json  verify-GETTING-STARTED.md.json  verify-README.md.json  verify-SPEC.md.json  verify-TESTING.md.json
deploy/: llama-server.container.example  sift.container
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
docs/decisions/: 0001-typer-over-argparse.md  0002-weasyprint-pdf-extra.md  0003-hand-rolled-masking-over-drain3.md  0004-cluster-label-timing.md  0005-analyze-exit-codes.md  0006-configurable-adapter.md  0007-report-exit-codes.md  0008-report-determinism-scope.md  0009-kb-index-per-case.md  0010-eval-exit-codes.md  0011-quadlet-loopback-guard.md  0012-perfmon-naive-timestamps.md  0013-dsserrors-qualified-mcm-sniff.md
docs/reference/: analyze_dss8.py
eval/: thresholds.toml
src/sift/: __init__.py  cli.py  config.py  models.py  store.py
tests/: _eval_fixtures.py  _perfmon_fixtures.py  _report_fixtures.py  conftest.py  test_acceptance.py  test_adapters_detect.py  test_analyze.py  test_budget.py  test_cli.py  test_cli_mcm.py  test_cli_perfmon.py  test_cli_report.py  test_cluster.py  test_config.py  test_configurable_adapter.py  test_conftest_network_guard.py  test_dedup.py  test_disk_full.py  test_doctor.py  test_dsserrors.py  test_dssperfmon.py  test_eustack.py  test_eval_cases.py  test_eval_harness.py  test_eval_judge.py  test_eval_thresholds.py  test_eval_truth.py  test_genericlog.py  test_hypothesise.py  test_journald.py  test_kb_analyze.py  test_kb_retrieval.py  test_llm_client.py  test_mcm.py  test_mcm_analyze.py  test_mcm_facts.py  test_mcm_report.py  test_models.py  test_packaging.py  test_perfmon.py  (+10 more)
tests/perf/: generate_synthetic.py  test_perf_ingest.py
(+194 files in other folders)
